# uni20

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING_8md.html  COPYRIGHT_8md.html  Doxygen_8md.html  Python_8md.html  README.md  _xE4_xBD_xBF_xE7_x94_xA8Git_xE8_x88_x87VSCode_xE6_x8C_x87_xE5_x8D_x97_8md.html  ad__example_8cpp.html  ad__example_8cpp__incl.map  ad__example_8cpp__incl.md5  adaptive__exponential_8cpp.html  adaptive__exponential_8cpp__incl.map  adaptive__exponential_8cpp__incl.md5  ai__guidance_2reverse__mode__ad_8md.html  aligned__buffer_8hpp.html  aligned__buffer_8hpp__incl.map  aligned__buffer_8hpp__incl.md5  aligned__buffer_8hpp_source.html  annotated.html  apply__unary_8hpp.html  apply__unary_8hpp__dep__incl.map  apply__unary_8hpp__dep__incl.md5  apply__unary_8hpp__incl.map  apply__unary_8hpp__incl.md5  apply__unary_8hpp_source.html  architecture__diagram_8md.html  architecture__status_8md.html  assign_8hpp.html  assign_8hpp__incl.map  assign_8hpp__incl.md5  assign_8hpp_source.html  assignment__semantics_8hpp.html  assignment__semantics_8hpp__dep__incl.map  assignment__semantics_8hpp__dep__incl.md5  (+1520 more)
benchmarks/: CMakeLists.txt  benchmark_coroutine_overhead.cpp  benchmark_dummy.cpp  benchmark_tensor_tbb_scaling.cpp
bindings/python/: CMakeLists.txt  buildinfo.hpp.in  core_bindings.cpp  greet.cpp  registry.hpp  uni20_python.cpp
examples/: CMakeLists.txt  ad_example.cpp  async_buffer_semantics_example.cpp  async_example.cpp  async_example2.cpp  async_fib_example.cpp  async_kernel_shapes_example.cpp  async_ops_example.cpp  async_tbb_reduction_example.cpp  blas_example.cpp  bug.cpp  future_example.cpp  gradient_solver.cpp  gtest_floating_eq_example.cpp  mdspan_example.cpp  python_buildinfo_example.py  trace_example.cpp
src/: CMakeLists.txt  config.hpp.in  example.cpp
src/async/: CMakeLists.txt  async-task-impl.hpp  async.hpp  async_errors.hpp  async_impl.hpp  async_node.hpp  async_ops.hpp  async_task.hpp  async_task_impl.hpp  async_task_promise.hpp  async_toys.hpp  awaiters.hpp  buffers.hpp  cuda_task.hpp  debug_scheduler.hpp  dual.hpp  dual_toys.hpp  epoch_context.hpp  epoch_context_decl.hpp  epoch_context_old.hpp  epoch_queue.hpp  epoch_queue_old.hpp  future_value.hpp  reverse_value.hpp  scheduler.hpp  shared_storage.hpp  storage_buffer.hpp  task_registry.hpp  task_registry_debug.cpp  task_registry_debug.hpp  task_registry_dummy.hpp  tbb_numa_scheduler.hpp  tbb_scheduler.hpp
src/backend/: CMakeLists.txt  backend.hpp  backends.hpp
src/backend/blas/: CMakeLists.txt  backend_blas.hpp  blas_vendor.cpp  blas_vendor.hpp  blasproto.hpp  reference_blas.hpp
src/common/: CMakeLists.txt  aligned_buffer.hpp  demangle.hpp  floating_eq.hpp  gtest.hpp  mdspan.hpp  namedenum.hpp  static_vector.hpp  string_util.hpp  terminal.cpp  terminal.hpp  trace.hpp  trace_impl.hpp  types.hpp
src/core/: CMakeLists.txt  dummy.cpp  dummy.hpp  math.hpp  scalar_concepts.hpp  scalar_traits.hpp  types.hpp
src/expokit/: CMakeLists.txt  COPYRIGHT.md  adaptive_exponential.cpp  expokitf.h  exponential.cpp  matrix.hpp  zgpadm.cpp
src/kernel/: CMakeLists.txt  contract.hpp  operations.hpp
src/kernel/blas/: CMakeLists.txt  backend_blas.hpp  blas.hpp  contract.hpp
src/kernel/cpu/: CMakeLists.txt  contract.hpp  cpu.hpp
src/level1/: CMakeLists.txt  apply_unary.hpp  assign.hpp  concepts.hpp  sum.hpp  transform_view.hpp  zip_layout.hpp  zip_transform.hpp
src/linalg/: CMakeLists.txt  backend_manifest.hpp  linalg.hpp
src/linalg/ops/: matrix_ops.hpp
src/mdspan/: CMakeLists.txt  concepts.hpp  iteration_plan.hpp  strides.hpp  zip_layout.hpp
src/storage/: vectorstorage.hpp
src/tags/: blas.hpp  cpu.hpp  cublas.hpp  cuda.hpp  cusolver.hpp  lapack.hpp  tags.hpp
src/tensor/: basic_tensor.hpp  layout.hpp  tensor.hpp  tensor_view.hpp
src/uni20/: CMakeLists.txt  config.hpp.in  uni20.cpp
tests/: CMakeLists.txt  helpers.hpp  test_dummy.cpp  test_types.cpp  uni20_tests_main.cpp
tests/async/: CMakeLists.txt  test_async_awaiters.cpp  test_async_basic.cpp  test_async_concepts.cpp  test_async_default_init_threads.cpp  test_async_deferred.cpp  test_async_destroy.cpp  test_async_emplace.cpp  test_async_move.cpp  test_async_ops.cpp  test_async_task_await.cpp  test_async_task_lifetime.cpp  test_async_toys.cpp  test_async_write_to.cpp  test_dual.cpp  test_future_value.cpp  test_reverse_value.cpp  test_scheduler_stress.cpp  test_shared_storage.cpp  test_task_registry.cpp  test_tbb_numa_scheduler.cpp  test_tbb_scheduler.cpp  test_var.cpp
tests/backend/: CMakeLists.txt
tests/common/: CMakeLists.txt  test_aligned_buffer.cpp  test_dummy.cpp  test_floating_eq.cpp  test_half_int.cpp  test_namedenum.cpp  test_string_util.cpp  test_terminal_color.cpp  test_terminal_utils.cpp  test_trace.cpp  test_trace_debug.cpp  test_trace_format.cpp  test_trace_ndebug.cpp  test_types.cpp
tests/core/: CMakeLists.txt  test_scalar_concepts.cpp  test_scalar_traits.cpp  test_types.cpp
tests/expokit/: CMakeLists.txt  test_expm.cpp
tests/kernel/: CMakeLists.txt  test_contract.cpp  test_contract_blas.cpp  test_contract_common.hpp  test_contract_cpu.cpp  test_matmul_colunm_major.cpp  test_matmul_colunm_major12345678.cpp
tests/level1/: CMakeLists.txt  helpers.hpp  test_apply_unary.cpp  test_assign.cpp  test_iteration_plan.cpp  test_sum.cpp  test_zip_layout.cpp  test_zip_transform.cpp
tests/linalg/: CMakeLists.txt  test_cpu_ops.cpp
tests/matrix/: CMakeLists.txt  test_sparse_matrix.cpp  test_sparse_matrix_ops.cpp
tests/mdspan/: CMakeLists.txt  test_concepts.cpp  test_iteration_plan.cpp  test_strides.cpp  test_zip_layout.cpp
tests/models/: CMakeLists.txt  test_heisenberg.cpp  test_spin_half.cpp
tests/operator/: CMakeLists.txt  test_finite_triangular_mpo.cpp  test_local_operator.cpp  test_local_space.cpp  test_operator_component.cpp
tests/python/: CMakeLists.txt  test_buildinfo.py  test_greet.py
tests/symmetry/: CMakeLists.txt  test_block_space.cpp  test_qnum.cpp  test_u1.cpp
tests/tensor/: CMakeLists.txt  test_basic_tensor.cpp  test_tensor_view.cpp
(+422 files in other folders)
